--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,6 @@ monitor=highres,preferred,auto,auto
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-#$menu = wofi --show run
 $menu = fuzzel
 
 #################
@@ -34,7 +33,7 @@ $menu = fuzzel
 
 exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper & brave
 
 
 #############################
@@ -56,7 +55,8 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    #gaps_out = 20
+    gaps_out = 5
 
     border_size = 2
 
@@ -65,7 +65,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -175,17 +175,19 @@ $mainMod = ALT# Sets "ALT" key as main modifier
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, W, killactive,
 bind = $mainMod SHIFT, Q, exit,
-#bind = $mainMod, F, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, $menu
-#bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, space, exec, $menu
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod SHIFT, semicolon, fullscreen
+#bind = SUPER, L, togglefloating,
+#bind = SUPER, K, pseudo, # dwindle
+bind = $mainMod SHIFT, J, togglesplit, # dwindle
+
+# Move focus with SHIFT + SUPER
+bind = $mainMod, tab, movefocus, l
+bind = $mainMod SHIFT, tab, movefocus, r
+#bind = $mainMod, K, movefocus, u
+#bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -215,9 +217,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Scroll through existing workspaces with mainMod + tab
+#bind = $mainMod, tab, workspace, e+1
+#bind = $mainMod SHIFT, tab, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
