more hyprland updates

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,11 @@
 monitor=highres,preferred,auto,auto
 
 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -184,8 +189,8 @@ bind = $mainMod SHIFT, semicolon, fullscreen
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 
 # Move focus with SHIFT + SUPER
-bind = $mainMod, tab, movefocus, l
-bind = $mainMod SHIFT, tab, movefocus, r
+bind = $mainMod, tab, cyclenext,
+bind = $mainMod SHIFT, tab, cyclenext, prev 
 #bind = $mainMod, K, movefocus, u
 #bind = $mainMod, J, movefocus, d
 
