--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,7 +25,7 @@ xwayland {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = foot
 $fileManager = dolphin
 $menu = fuzzel
 
@@ -38,8 +38,8 @@ $menu = fuzzel
 
 exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & brave
-
+exec-once = waybar #& hyprpaper & brave
+exec-once = hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -59,37 +59,37 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
+    gaps_in = 0 # 5
     #gaps_out = 20
-    gaps_out = 5
+    gaps_out = 0 # 5
 
-    border_size = 2
+    border_size = 0 #10
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = true
+    #resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0 #10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    #drop_shadow = true
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -103,7 +103,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false #true
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -125,13 +125,14 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    # new_status = master
+    inherit_fullscreen = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -174,7 +175,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT# Sets "ALT" key as main modifier
+$mainMod = SUPER# Sets "ALT" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
@@ -183,14 +184,14 @@ bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, P, exec, $menu
 bind = $mainMod, space, exec, $menu
 
-bind = $mainMod SHIFT, semicolon, fullscreen
+bind = $mainMod, F, fullscreen
 #bind = SUPER, L, togglefloating,
 #bind = SUPER, K, pseudo, # dwindle
-bind = $mainMod SHIFT, J, togglesplit, # dwindle
+# bind = $mainMod SHIFT, J, togglesplit, # dwindle
 
 # Move focus with SHIFT + SUPER
-bind = $mainMod, tab, cyclenext,
-bind = $mainMod SHIFT, tab, cyclenext, prev 
+bind = $mainMod, J, cyclenext,
+bind = $mainMod,  K, cyclenext, prev
 #bind = $mainMod, K, movefocus, u
 #bind = $mainMod, J, movefocus, d
 
@@ -237,6 +238,12 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# trigger when the switch is toggled
+#bindl = , switch:lid, exec, hyprlock
+
+# Automatically lock the screen when the lid closes
+bindl=,switch:on:Lid Switch, exec, hyprlock --immediate
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
