--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -154,6 +154,8 @@ input {
 
     touchpad {
         natural_scroll = false
+        disable_while_typing = true
+        tap-to-click = false
     }
 }
 
@@ -243,7 +245,7 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 #bindl = , switch:lid, exec, hyprlock
 
 # Automatically lock the screen when the lid closes
-bindl=,switch:on:Lid Switch, exec, hyprlock --immediate
+# bindl=,switch:on:Lid Switch, exec, hyprlock --immediate
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
