added sway config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,14 +119,14 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    #pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    #preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     # new_status = master
-    inherit_fullscreen = true
+#    inherit_fullscreen = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -240,6 +240,11 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+
+# waybar toggle
+bindel = $mainMod, B, exec, pkill -SIGUSR1 waybar
+
 
 # trigger when the switch is toggled
 #bindl = , switch:lid, exec, hyprlock
