--- a/sway/config
+++ b/sway/config
@@ -1,8 +1,11 @@
 exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
-         timeout 600 'swaymsg "output * dpms off"' \
-            resume 'swaymsg "output * dpms on"' \
+         timeout 600 'systemctl hibernate' \
          before-sleep 'swaylock -f -c 000000'
+
+
+         #timeout 600 'swaymsg "output * dpms off"' \
+         #   resume 'swaymsg "output * dpms on"' \
 
 # Default config for sway
 #
